# aoc_rust

./: Cargo.toml
src/day1/: main.rs  main2.rs
src/day2/: main1.rs  main2.rs
